Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -204,11 +204,11 @@
   "pli-tv-kd13:5.3.10": "This is the motion. ",
   "pli-tv-kd13:5.3.11": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:5.3.12": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:5.3.13": "He asked the Sangha for probation for one day for that offense, ",
-  "pli-tv-kd13:5.3.14": "and the Sangha gave him that probation. ",
-  "pli-tv-kd13:5.3.15": "When he had completed the probation, he asked the Sangha for the trial period of six days for that offense, ",
-  "pli-tv-kd13:5.3.16": "and the Sangha gave him the trial period. ",
-  "pli-tv-kd13:5.3.17": "He’s now completed the trial period and is asking the Sangha for rehabilitation. ",
+  "pli-tv-kd13:5.3.13": "He asked the Sangha to give him probation for one day for that offense, ",
+  "pli-tv-kd13:5.3.14": "which it did. ",
+  "pli-tv-kd13:5.3.15": "When he had completed that probation, he asked the Sangha to give him the trial period of six days, ",
+  "pli-tv-kd13:5.3.16": "which it did. ",
+  "pli-tv-kd13:5.3.17": "He’s now completed that trial period and is asking the Sangha for rehabilitation. ",
   "pli-tv-kd13:5.3.18": "The Sangha rehabilitates him. ",
   "pli-tv-kd13:5.3.19": "Any monk who approves of rehabilitating him should remain silent. ",
   "pli-tv-kd13:5.3.20": "Any monk who doesn’t approve should speak up. ",
