--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -215,7 +215,7 @@
   "pli-tv-kd13:5.3.21": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:5.3.22": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:5.3.23": "The Sangha has rehabilitated the monk Udāyī. ",
-  "pli-tv-kd13:5.3.24": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:5.3.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:6.1.0": "1.6 Probation for those with offenses concealed for five days ",
   "pli-tv-kd13:6.1.1": "On one occasion Venerable Udāyī had committed one offense of intentional emission of semen, concealed for two days. … ",
   "pli-tv-kd13:6.1.2": "concealed for three days. … ",
