--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -225,7 +225,7 @@
   "pli-tv-kd13:6.1.7": "adding, “What should I do now?” ",
   "pli-tv-kd13:6.1.8": "They told the Buddha. ",
   "pli-tv-kd13:6.1.9": "“Well then, the Sangha should give the monk Udāyī probation for five days for one offense of intentional emission of semen, concealed for five days. ",
-  "pli-tv-kd13:6.1.10": "And it should be given like this: ",
+  "pli-tv-kd13:6.1.10": "And it should be given like this. ",
   "pli-tv-kd13:6.1.11": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say: ",
   "pli-tv-kd13:6.1.12": "‘Venerables, I’ve committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:6.1.13": "I ask the Sangha for probation for five days for that offense.’ ",
