Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -246,7 +246,7 @@
   "pli-tv-kd13:6.1.28": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:6.1.29": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:6.1.30": "The Sangha has given the monk Udāyī probation for five days for one offense of intentional emission of semen, concealed for five days. ",
-  "pli-tv-kd13:6.1.31": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:6.1.31": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:7.1.0": "1.7 Sending back to the beginning of those on probation ",
   "pli-tv-kd13:7.1.1": "While he was on probation, he committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:7.1.2": "He told the monks, ",
