Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -248,11 +248,11 @@
   "pli-tv-kd13:6.1.30": "The Sangha has given the monk Udāyī probation for five days for one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:6.1.31": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:7.1.0": "1.7 Sending back to the beginning of those on probation ",
-  "pli-tv-kd13:7.1.1": "While he was on probation, he committed one unconcealed offense of intentional emission of semen. ",
+  "pli-tv-kd13:7.1.1": "While on probation, he committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:7.1.2": "He told the monks, ",
   "pli-tv-kd13:7.1.3": "“I had committed one offense of intentional emission of semen, concealed for five days. ",
-  "pli-tv-kd13:7.1.4": "I asked the Sangha for probation for five days for that offense, ",
-  "pli-tv-kd13:7.1.5": "and the Sangha gave me that probation. ",
+  "pli-tv-kd13:7.1.4": "I asked the Sangha to give me probation for five days for that offense, ",
+  "pli-tv-kd13:7.1.5": "which it did. ",
   "pli-tv-kd13:7.1.6": "While on probation, I committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:7.1.7": "What should I do now?” ",
   "pli-tv-kd13:7.1.8": "They told the Buddha. ",
