--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -257,7 +257,7 @@
   "pli-tv-kd13:7.1.7": "What should I do now?” ",
   "pli-tv-kd13:7.1.8": "They told the Buddha. ",
   "pli-tv-kd13:7.1.9": "“Well then, the Sangha should send the monk Udāyī back to the beginning for one unconcealed offense of intentional emission of semen, committed while on probation. ",
-  "pli-tv-kd13:7.2.1": "And it should be done like this: ",
+  "pli-tv-kd13:7.2.1": "And it should be done like this. ",
   "pli-tv-kd13:7.2.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:7.2.3": "and say: ",
   "pli-tv-kd13:7.2.4": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for five days. ",
