--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -270,9 +270,9 @@
   "pli-tv-kd13:7.3.1": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:7.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:7.3.3": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for five days. ",
-  "pli-tv-kd13:7.3.4": "He asked the Sangha for probation for five days for that offense, ",
-  "pli-tv-kd13:7.3.5": "and the Sangha gave him that probation. ",
-  "pli-tv-kd13:7.3.6": "While he was on probation, he committed one unconcealed offense of intentional emission of semen. ",
+  "pli-tv-kd13:7.3.4": "He asked the Sangha to give him probation for five days for that offense, ",
+  "pli-tv-kd13:7.3.5": "which it did. ",
+  "pli-tv-kd13:7.3.6": "While on probation, he committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:7.3.7": "He’s now asking the Sangha to send him back to the beginning for that offense. ",
   "pli-tv-kd13:7.3.8": "If it seems appropriate to the Sangha, the Sangha should send him back to the beginning. ",
   "pli-tv-kd13:7.3.9": "This is the motion. ",
