Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -288,7 +288,7 @@
   "pli-tv-kd13:7.3.19": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:7.3.20": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:7.3.21": "The Sangha has sent the monk Udāyī back to the beginning for one unconcealed offense of intentional emission of semen, committed while on probation. ",
-  "pli-tv-kd13:7.3.22": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:7.3.22": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:8.1.0": "1.8 Sending back to the beginning of those deserving the trial period ",
   "pli-tv-kd13:8.1.1": "When he had completed the probation, while deserving the trial period, he committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:8.1.2": "He told the monks, ",
