--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -293,11 +293,11 @@
   "pli-tv-kd13:8.1.1": "When he had completed that probation, while deserving the trial period, he committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:8.1.2": "He told the monks, ",
   "pli-tv-kd13:8.1.3": "“I had committed one offense of intentional emission of semen, concealed for five days. ",
-  "pli-tv-kd13:8.1.4": "I asked the Sangha for probation for five days for that offense, ",
-  "pli-tv-kd13:8.1.5": "and the Sangha gave me that probation. ",
+  "pli-tv-kd13:8.1.4": "I asked the Sangha to give me probation for five days for that offense, ",
+  "pli-tv-kd13:8.1.5": "which it did. ",
   "pli-tv-kd13:8.1.6": "While on probation, I committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:8.1.7": "I asked the Sangha to send me back to the beginning for that offense, ",
-  "pli-tv-kd13:8.1.8": "and the Sangha sent me back to the beginning. ",
+  "pli-tv-kd13:8.1.8": "which it did. ",
   "pli-tv-kd13:8.1.9": "When I had completed the probation, while deserving the trial period, I committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:8.1.10": "What should I do now?” ",
   "pli-tv-kd13:8.1.11": "They told the Buddha. ",
