--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -302,19 +302,19 @@
   "pli-tv-kd13:8.1.10": "What should I do now?” ",
   "pli-tv-kd13:8.1.11": "They told the Buddha. ",
   "pli-tv-kd13:8.1.12": "“Well then, the Sangha should send the monk Udāyī back to the beginning for one unconcealed offense of intentional emission of semen, committed while deserving the trial period. ",
-  "pli-tv-kd13:8.2.1": "And it should be done like this: ",
+  "pli-tv-kd13:8.2.1": "And it should be done like this. ",
   "pli-tv-kd13:8.2.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:8.2.3": "and say: ",
   "pli-tv-kd13:8.2.4": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for five days. … ",
   "pli-tv-kd13:8.2.5": "When I had completed the probation, while deserving the trial period, I committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:8.2.6": "I ask the Sangha to send me back to the beginning for that offense, committed while deserving the trial period.’ ",
+  "pli-tv-kd13:8.2.6": "I ask the Sangha to send me back to the beginning for that offense.’ ",
   "pli-tv-kd13:8.2.7": "And he should ask a second ",
   "pli-tv-kd13:8.2.8": "and a third time. ",
   "pli-tv-kd13:8.3.1": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:8.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:8.3.3": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for five days. … ",
-  "pli-tv-kd13:8.3.4": "When he had completed the probation, while deserving the trial period, he committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:8.3.5": "He’s asking the Sangha to send him back to the beginning for that offense, committed while deserving the trial period. ",
+  "pli-tv-kd13:8.3.4": "When he had completed that probation, while deserving the trial period, he committed one unconcealed offense of intentional emission of semen. ",
+  "pli-tv-kd13:8.3.5": "He’s asking the Sangha to send him back to the beginning for that offense. ",
   "pli-tv-kd13:8.3.6": "If it seems appropriate to the Sangha, the Sangha should send him back to the beginning. ",
   "pli-tv-kd13:8.3.7": "This is the motion. ",
   "pli-tv-kd13:8.3.8": "Please, Venerables, I ask the Sangha to listen. ",
