Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -319,15 +319,15 @@
   "pli-tv-kd13:8.3.7": "This is the motion. ",
   "pli-tv-kd13:8.3.8": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:8.3.9": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for five days. … ",
-  "pli-tv-kd13:8.3.10": "When he had completed the probation, while deserving the trial period, he committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:8.3.11": "He’s asking the Sangha to send him back to the beginning for that offense, committed while deserving the trial period. ",
+  "pli-tv-kd13:8.3.10": "When he had completed that probation, while deserving the trial period, he committed one unconcealed offense of intentional emission of semen. ",
+  "pli-tv-kd13:8.3.11": "He’s asking the Sangha to send him back to the beginning for that offense. ",
   "pli-tv-kd13:8.3.12": "The Sangha sends him back to the beginning. ",
   "pli-tv-kd13:8.3.13": "Any monk who approves of sending him back to the beginning should remain silent. ",
   "pli-tv-kd13:8.3.14": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:8.3.15": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:8.3.16": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:8.3.17": "The Sangha has sent the monk Udāyī back to the beginning for one unconcealed offense of intentional emission of semen, committed while deserving the trial period. ",
-  "pli-tv-kd13:8.3.18": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:8.3.18": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:9.1.0": "1.9 Trial period for the three offenses ",
   "pli-tv-kd13:9.1.1": "When he had completed the probation, he told the monks, ",
   "pli-tv-kd13:9.1.2": "“I had committed one offense of intentional emission of semen, concealed for five days … ",
