--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -329,13 +329,13 @@
   "pli-tv-kd13:8.3.17": "The Sangha has sent the monk Udāyī back to the beginning for one unconcealed offense of intentional emission of semen, committed while deserving the trial period. ",
   "pli-tv-kd13:8.3.18": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:9.1.0": "1.9 Trial period for the three offenses ",
-  "pli-tv-kd13:9.1.1": "When he had completed the probation, he told the monks, ",
+  "pli-tv-kd13:9.1.1": "When he had completed that probation, he told the monks, ",
   "pli-tv-kd13:9.1.2": "“I had committed one offense of intentional emission of semen, concealed for five days … ",
   "pli-tv-kd13:9.1.3": "I’ve now completed the probation. ",
-  "pli-tv-kd13:9.1.4": "What should I do now?” ",
+  "pli-tv-kd13:9.1.4": "What should I do next?” ",
   "pli-tv-kd13:9.1.5": "They told the Buddha. ",
   "pli-tv-kd13:9.1.6": "“Well then, the Sangha should give the monk Udāyī the trial period of six days for the three offenses. ",
-  "pli-tv-kd13:9.2.1": "And it should be given like this: ",
+  "pli-tv-kd13:9.2.1": "And it should be given like this. ",
   "pli-tv-kd13:9.2.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:9.2.3": "and say: ",
   "pli-tv-kd13:9.2.4": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for five days. ",
