--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -348,7 +348,7 @@
   "pli-tv-kd13:9.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:9.3.3": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for five days. … ",
   "pli-tv-kd13:9.3.4": "He’s now completed that probation and is asking the Sangha for the trial period of six days for the three offenses. ",
-  "pli-tv-kd13:9.3.5": "If it seems appropriate to the Sangha, the Sangha should give him the trial period of six days for the three offenses. ",
+  "pli-tv-kd13:9.3.5": "If it seems appropriate to the Sangha, the Sangha should give him that trial period. ",
   "pli-tv-kd13:9.3.6": "This is the motion. ",
   "pli-tv-kd13:9.3.7": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:9.3.8": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for five days. … ",
