--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -353,8 +353,8 @@
   "pli-tv-kd13:9.3.7": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:9.3.8": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for five days. … ",
   "pli-tv-kd13:9.3.9": "He’s now completed that probation and is asking the Sangha for the trial period of six days for the three offenses. ",
-  "pli-tv-kd13:9.3.10": "The Sangha gives him the trial period of six days for the three offenses. ",
-  "pli-tv-kd13:9.3.11": "Any monk who approves of giving him the trial period of six days for the three offenses should remain silent. ",
+  "pli-tv-kd13:9.3.10": "The Sangha gives him that trial period. ",
+  "pli-tv-kd13:9.3.11": "Any monk who approves of giving him the trial period of six days should remain silent. ",
   "pli-tv-kd13:9.3.12": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:9.3.13": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:9.3.14": "For the third time I speak on this matter. … ",
