--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -359,7 +359,7 @@
   "pli-tv-kd13:9.3.13": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:9.3.14": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:9.3.15": "The Sangha has given the monk Udāyī the trial period of six days for the three offenses. ",
-  "pli-tv-kd13:9.3.16": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:9.3.16": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:10.1.0": "1.10 Sending back to the beginning of those undertaking the trial period ",
   "pli-tv-kd13:10.1.1": "While he was undertaking the trial period, he committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:10.1.2": "He told the monks, ",
