--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -368,7 +368,7 @@
   "pli-tv-kd13:10.1.5": "What should I do now?” ",
   "pli-tv-kd13:10.1.6": "They told the Buddha. ",
   "pli-tv-kd13:10.1.7": "“Well then, the Sangha should send the monk Udāyī back to the beginning for one unconcealed offense of intentional emission of semen, committed while undertaking the trial period. It should then give him the trial period of six days. ",
-  "pli-tv-kd13:10.1.8": "And he should be sent back to the beginning like this: ",
+  "pli-tv-kd13:10.1.8": "And he should be sent back to the beginning like this. ",
   "pli-tv-kd13:10.1.9": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:10.1.10": "and say: ",
   "pli-tv-kd13:10.1.11": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for five days. … ",
