Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -373,7 +373,7 @@
   "pli-tv-kd13:10.1.10": "and say: ",
   "pli-tv-kd13:10.1.11": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for five days. … ",
   "pli-tv-kd13:10.1.12": "While undertaking the trial period, I committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:10.1.13": "I ask the Sangha to send me back to the beginning for that offense, committed while undertaking the trial period.’ ",
+  "pli-tv-kd13:10.1.13": "I ask the Sangha to send me back to the beginning for that offense.’ ",
   "pli-tv-kd13:10.1.14": "And he should ask a second ",
   "pli-tv-kd13:10.1.15": "and a third time. ",
   "pli-tv-kd13:10.1.16": "A competent and capable monk should then inform the Sangha: ",
@@ -383,7 +383,7 @@
   "pli-tv-kd13:10.1.20": "If it seems appropriate to the Sangha, the Sangha should send him back to the beginning. ",
   "pli-tv-kd13:10.1.21": "This is the motion. … ",
   "pli-tv-kd13:10.1.22": "The Sangha has sent the monk Udāyī back to the beginning for one unconcealed offense of intentional emission of semen, committed while undertaking the trial period. ",
-  "pli-tv-kd13:10.1.23": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd13:10.1.23": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd13:10.1.24": "And he should be given the trial period of six days like this: ",
   "pli-tv-kd13:10.1.25": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:10.1.26": "and say: ",
