--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -384,7 +384,7 @@
   "pli-tv-kd13:10.1.21": "This is the motion. … ",
   "pli-tv-kd13:10.1.22": "The Sangha has sent the monk Udāyī back to the beginning for one unconcealed offense of intentional emission of semen, committed while undertaking the trial period. ",
   "pli-tv-kd13:10.1.23": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
-  "pli-tv-kd13:10.1.24": "And he should be given the trial period of six days like this: ",
+  "pli-tv-kd13:10.1.24": "And he should be given the trial period of six days like this. ",
   "pli-tv-kd13:10.1.25": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:10.1.26": "and say: ",
   "pli-tv-kd13:10.1.27": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for five days. … ",
