--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -389,9 +389,9 @@
   "pli-tv-kd13:10.1.26": "and say: ",
   "pli-tv-kd13:10.1.27": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for five days. … ",
   "pli-tv-kd13:10.1.28": "While undertaking the trial period, I committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:10.1.29": "I asked the Sangha to send me back to the beginning for that offense, committed while undertaking the trial period, ",
-  "pli-tv-kd13:10.1.30": "and the Sangha sent me back to the beginning. ",
-  "pli-tv-kd13:10.1.31": "I now ask the Sangha for the trial period of six days for that offense, committed while undertaking the trial period.’ ",
+  "pli-tv-kd13:10.1.29": "I asked the Sangha to send me back to the beginning for that offense, ",
+  "pli-tv-kd13:10.1.30": "which it did. ",
+  "pli-tv-kd13:10.1.31": "I now ask the Sangha for the trial period of six days for that offense.’ ",
   "pli-tv-kd13:10.1.32": "And he should ask a second ",
   "pli-tv-kd13:10.1.33": "and a third time. ",
   "pli-tv-kd13:10.1.34": "A competent and capable monk should then inform the Sangha: ",
