Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -398,7 +398,7 @@
   "pli-tv-kd13:10.1.35": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:10.1.36": "The monk Udāyī … ",
   "pli-tv-kd13:10.1.37": "is asking the Sangha for the trial period of six days for that offense, committed while undertaking the trial period. ",
-  "pli-tv-kd13:10.1.38": "If it seems appropriate to the Sangha, the Sangha should give him the trial period of six days. ",
+  "pli-tv-kd13:10.1.38": "If it seems appropriate to the Sangha, the Sangha should give him that trial period. ",
   "pli-tv-kd13:10.1.39": "This is the motion. … ",
   "pli-tv-kd13:10.1.40": "The Sangha has given the monk Udāyī the trial period of six days for one unconcealed offense of intentional emission of semen, committed while undertaking the trial period. ",
   "pli-tv-kd13:10.1.41": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
