Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -401,7 +401,7 @@
   "pli-tv-kd13:10.1.38": "If it seems appropriate to the Sangha, the Sangha should give him that trial period. ",
   "pli-tv-kd13:10.1.39": "This is the motion. … ",
   "pli-tv-kd13:10.1.40": "The Sangha has given the monk Udāyī the trial period of six days for one unconcealed offense of intentional emission of semen, committed while undertaking the trial period. ",
-  "pli-tv-kd13:10.1.41": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:10.1.41": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:11.1.0": "1.11 Sending back to the beginning of those deserving rehabilitation ",
   "pli-tv-kd13:11.1.1": "When he had completed the trial period, while deserving rehabilitation, he committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:11.1.2": "He told the monks, ",
