--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -413,7 +413,7 @@
   "pli-tv-kd13:11.1.8": "And he should be sent back to the beginning like this. … ",
   "pli-tv-kd13:11.1.9": "And he should be given the trial period of six days like this. … ",
   "pli-tv-kd13:11.1.10": "The Sangha has given the monk Udāyī the trial period of six days for one unconcealed offense of intentional emission of semen, committed while deserving rehabilitation. ",
-  "pli-tv-kd13:11.1.11": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:11.1.11": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:12.1.0": "1.12 Rehabilitation of those sent back to the beginning ",
   "pli-tv-kd13:12.1.1": "When he had completed the trial period, he told the monks, ",
   "pli-tv-kd13:12.1.2": "“I had committed one offense of intentional emission of semen, concealed for five days. … ",
