--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -415,7 +415,7 @@
   "pli-tv-kd13:11.1.10": "The Sangha has given the monk Udāyī the trial period of six days for one unconcealed offense of intentional emission of semen, committed while deserving rehabilitation. ",
   "pli-tv-kd13:11.1.11": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:12.1.0": "1.12 Rehabilitation of those sent back to the beginning ",
-  "pli-tv-kd13:12.1.1": "When he had completed the trial period, he told the monks, ",
+  "pli-tv-kd13:12.1.1": "When he had completed that trial period, he told the monks, ",
   "pli-tv-kd13:12.1.2": "“I had committed one offense of intentional emission of semen, concealed for five days. … ",
   "pli-tv-kd13:12.1.3": "I’ve now completed the trial period. ",
   "pli-tv-kd13:12.1.4": "What should I do now?” ",
