--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -418,7 +418,7 @@
   "pli-tv-kd13:12.1.1": "When he had completed that trial period, he told the monks, ",
   "pli-tv-kd13:12.1.2": "“I had committed one offense of intentional emission of semen, concealed for five days. … ",
   "pli-tv-kd13:12.1.3": "I’ve now completed the trial period. ",
-  "pli-tv-kd13:12.1.4": "What should I do now?” ",
+  "pli-tv-kd13:12.1.4": "What should I do next?” ",
   "pli-tv-kd13:12.1.5": "They told the Buddha. ",
   "pli-tv-kd13:12.1.6": "“Well then, the Sangha should rehabilitate the monk Udāyī. ",
   "pli-tv-kd13:12.2.1": "And it should be done like this: ",
