--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -421,7 +421,7 @@
   "pli-tv-kd13:12.1.4": "What should I do next?” ",
   "pli-tv-kd13:12.1.5": "They told the Buddha. ",
   "pli-tv-kd13:12.1.6": "“Well then, the Sangha should rehabilitate the monk Udāyī. ",
-  "pli-tv-kd13:12.2.1": "And it should be done like this: ",
+  "pli-tv-kd13:12.2.1": "And it should be done like this. ",
   "pli-tv-kd13:12.2.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:12.2.3": "and say: ",
   "pli-tv-kd13:12.2.4": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for five days. ",
