--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -425,7 +425,7 @@
   "pli-tv-kd13:12.2.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:12.2.3": "and say: ",
   "pli-tv-kd13:12.2.4": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for five days. ",
-  "pli-tv-kd13:12.2.5": "I asked the Sangha for probation for five days for that offense, ",
+  "pli-tv-kd13:12.2.5": "I asked the Sangha to give me probation for five days for that offense, ",
   "pli-tv-kd13:12.2.6": "and the Sangha gave me that probation. ",
   "pli-tv-kd13:12.2.7": "While on probation, I committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:12.2.8": "I asked the Sangha to send me back to the beginning for that offense, ",
