Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -426,15 +426,15 @@
   "pli-tv-kd13:12.2.3": "and say: ",
   "pli-tv-kd13:12.2.4": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:12.2.5": "I asked the Sangha to give me probation for five days for that offense, ",
-  "pli-tv-kd13:12.2.6": "and the Sangha gave me that probation. ",
+  "pli-tv-kd13:12.2.6": "which it did. ",
   "pli-tv-kd13:12.2.7": "While on probation, I committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:12.2.8": "I asked the Sangha to send me back to the beginning for that offense, ",
   "pli-tv-kd13:12.2.9": "which it did. ",
   "pli-tv-kd13:12.2.10": "When I had completed the probation, while deserving the trial period, I committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:12.2.11": "I asked the Sangha to send me back to the beginning for that offense, ",
   "pli-tv-kd13:12.2.12": "which it did. ",
-  "pli-tv-kd13:12.2.13": "When I had completed the probation, I asked the Sangha for the trial period of six days for the three offenses, ",
-  "pli-tv-kd13:12.2.14": "and the Sangha gave me the trial period. ",
+  "pli-tv-kd13:12.2.13": "When I had completed the probation, I asked the Sangha to give me the trial period of six days, ",
+  "pli-tv-kd13:12.2.14": "which it did. ",
   "pli-tv-kd13:12.2.15": "While undertaking the trial period, I committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:12.2.16": "I asked the Sangha to send me back to the beginning for that offense, ",
   "pli-tv-kd13:12.2.17": "which it did. ",
