Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -440,7 +440,7 @@
   "pli-tv-kd13:12.2.17": "which it did. ",
   "pli-tv-kd13:12.2.18": "I then asked the Sangha to give me the trial period for that offense, ",
   "pli-tv-kd13:12.2.19": "which it did. ",
-  "pli-tv-kd13:12.2.20": "When I had completed the trial period, while deserving rehabilitation, I committed one unconcealed offense of intentional emission of semen. ",
+  "pli-tv-kd13:12.2.20": "When I had completed that trial period, while deserving rehabilitation, I committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:12.2.21": "I asked the Sangha to send me back to the beginning for that offense, ",
   "pli-tv-kd13:12.2.22": "which it did. ",
   "pli-tv-kd13:12.2.23": "I then asked the Sangha to give me the trial period for that offense, ",
