--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -444,7 +444,7 @@
   "pli-tv-kd13:12.2.21": "I asked the Sangha to send me back to the beginning for that offense, ",
   "pli-tv-kd13:12.2.22": "which it did. ",
   "pli-tv-kd13:12.2.23": "I then asked the Sangha to give me the trial period for that offense, ",
-  "pli-tv-kd13:12.2.24": "which it gave me. ",
+  "pli-tv-kd13:12.2.24": "which it did. ",
   "pli-tv-kd13:12.2.25": "I’ve now completed the trial period and I ask the Sangha for rehabilitation.’ ",
   "pli-tv-kd13:12.2.26": "And he should ask a second ",
   "pli-tv-kd13:12.2.27": "and a third time. ",
