--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -445,7 +445,7 @@
   "pli-tv-kd13:12.2.22": "which it did. ",
   "pli-tv-kd13:12.2.23": "I then asked the Sangha to give me the trial period for that offense, ",
   "pli-tv-kd13:12.2.24": "which it did. ",
-  "pli-tv-kd13:12.2.25": "I’ve now completed the trial period and I ask the Sangha for rehabilitation.’ ",
+  "pli-tv-kd13:12.2.25": "I’ve now completed the trial period and ask the Sangha for rehabilitation.’ ",
   "pli-tv-kd13:12.2.26": "And he should ask a second ",
   "pli-tv-kd13:12.2.27": "and a third time. ",
   "pli-tv-kd13:12.3.1": "A competent and capable monk should then inform the Sangha: ",
