--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -453,7 +453,7 @@
   "pli-tv-kd13:12.3.3": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:12.3.4": "He asked the Sangha to give him probation for five days for that offense, ",
   "pli-tv-kd13:12.3.5": "which it did. ",
-  "pli-tv-kd13:12.3.6": "While he was on probation, he committed one unconcealed offense of intentional emission of semen. ",
+  "pli-tv-kd13:12.3.6": "While on probation, he committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:12.3.7": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:12.3.8": "which it did. ",
   "pli-tv-kd13:12.3.9": "When he had completed the probation, while deserving the trial period, he committed one unconcealed offense of intentional emission of semen. ",
