Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -456,17 +456,17 @@
   "pli-tv-kd13:12.3.6": "While on probation, he committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:12.3.7": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:12.3.8": "which it did. ",
-  "pli-tv-kd13:12.3.9": "When he had completed the probation, while deserving the trial period, he committed one unconcealed offense of intentional emission of semen. ",
+  "pli-tv-kd13:12.3.9": "When he had completed that probation, while deserving the trial period, he committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:12.3.10": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:12.3.11": "which it did. ",
-  "pli-tv-kd13:12.3.12": "When he had completed the probation, he asked the Sangha for the trial period of six days for the three offenses, ",
-  "pli-tv-kd13:12.3.13": "and the Sangha gave him the trial period. ",
+  "pli-tv-kd13:12.3.12": "When he had completed that probation, he asked the Sangha to give him the trial period of six days for the three offenses, ",
+  "pli-tv-kd13:12.3.13": "which it did. ",
   "pli-tv-kd13:12.3.14": "While he was undertaking the trial period, he committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:12.3.15": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:12.3.16": "which it did. ",
   "pli-tv-kd13:12.3.17": "He then asked the Sangha to give him the trial period for that offense, ",
-  "pli-tv-kd13:12.3.18": "and the Sangha gave him the trial period. ",
-  "pli-tv-kd13:12.3.19": "When he had completed the trial period, while deserving rehabilitation, he committed one unconcealed offense of intentional emission of semen. ",
+  "pli-tv-kd13:12.3.18": "which it did. ",
+  "pli-tv-kd13:12.3.19": "When he had completed that trial period, while deserving rehabilitation, he committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:12.3.20": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:12.3.21": "which it did. ",
   "pli-tv-kd13:12.3.22": "He then asked the Sangha to give him the trial period for that offense, ",
