Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -470,8 +470,8 @@
   "pli-tv-kd13:12.3.20": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:12.3.21": "which it did. ",
   "pli-tv-kd13:12.3.22": "He then asked the Sangha to give him the trial period for that offense, ",
-  "pli-tv-kd13:12.3.23": "and the Sangha gave him the trial period. ",
-  "pli-tv-kd13:12.3.24": "He’s now completed the trial period and is asking the Sangha for rehabilitation. ",
+  "pli-tv-kd13:12.3.23": "which it did. ",
+  "pli-tv-kd13:12.3.24": "He’s now completed that trial period and is asking the Sangha for rehabilitation. ",
   "pli-tv-kd13:12.3.25": "If it seems appropriate to the Sangha, the Sangha should rehabilitate him. ",
   "pli-tv-kd13:12.3.26": "This is the motion. ",
   "pli-tv-kd13:12.3.27": "‘Please, Venerables, I ask the Sangha to listen. ",
