Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -476,14 +476,14 @@
   "pli-tv-kd13:12.3.26": "This is the motion. ",
   "pli-tv-kd13:12.3.27": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:12.3.28": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for five days. … ",
-  "pli-tv-kd13:12.3.29": "He’s now completed the trial period and is asking the Sangha for rehabilitation. ",
+  "pli-tv-kd13:12.3.29": "He’s now completed that trial period and is asking the Sangha for rehabilitation. ",
   "pli-tv-kd13:12.3.30": "The Sangha rehabilitates him. ",
   "pli-tv-kd13:12.3.31": "Any monk who approves of rehabilitating him should remain silent. ",
-  "pli-tv-kd13:12.3.32": "Any monk who does not approve should speak up. ",
+  "pli-tv-kd13:12.3.32": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:12.3.33": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:12.3.34": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:12.3.35": "The Sangha has rehabilitated the monk Udāyī. ",
-  "pli-tv-kd13:12.3.36": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:12.3.36": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:13.1.0": "1.13 Probation for those with offenses concealed for a half-month ",
   "pli-tv-kd13:13.1.1": "On one occasion Venerable Udāyī had committed one offense of intentional emission of semen, concealed for a half-month. ",
   "pli-tv-kd13:13.1.2": "He told the monks about this, ",
