--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -490,7 +490,7 @@
   "pli-tv-kd13:13.1.4": "adding, “What should I do now?” ",
   "pli-tv-kd13:13.1.5": "They told the Buddha. ",
   "pli-tv-kd13:13.1.6": "“Well then, the Sangha should give the monk Udāyī probation for a half-month for one offense of intentional emission of semen, concealed for a half-month. ",
-  "pli-tv-kd13:13.1.7": "And it should be given like this: ",
+  "pli-tv-kd13:13.1.7": "And it should be given like this. ",
   "pli-tv-kd13:13.1.8": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:13.1.9": "and say: ",
   "pli-tv-kd13:13.1.10": "‘Venerables, I’ve committed one offense of intentional emission of semen, concealed for a half-month. ",
@@ -508,7 +508,7 @@
   "pli-tv-kd13:13.1.22": "He’s asking the Sangha for probation for a half-month for that offense. ",
   "pli-tv-kd13:13.1.23": "The Sangha gives him that probation. ",
   "pli-tv-kd13:13.1.24": "Any monk who approves of giving him that probation should remain silent. ",
-  "pli-tv-kd13:13.1.25": "Any monk who does not approve should speak up. ",
+  "pli-tv-kd13:13.1.25": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:13.1.26": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:13.1.27": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:13.1.28": "The Sangha has given the monk Udāyī probation for a half-month for one offense of intentional emission of semen, concealed for a half-month. ",
