Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -512,12 +512,12 @@
   "pli-tv-kd13:13.1.26": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:13.1.27": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:13.1.28": "The Sangha has given the monk Udāyī probation for a half-month for one offense of intentional emission of semen, concealed for a half-month. ",
-  "pli-tv-kd13:13.1.29": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:13.1.29": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:14.1.0": "1.14 Sending back to the beginning of those on probation for a half-month ",
-  "pli-tv-kd13:14.1.1": "While he was on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
+  "pli-tv-kd13:14.1.1": "While on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.1.2": "He told the monks, ",
   "pli-tv-kd13:14.1.3": "“I had committed one offense of intentional emission of semen, concealed for a half-month. ",
-  "pli-tv-kd13:14.1.4": "I asked the Sangha for probation for a half-month for that offense, ",
+  "pli-tv-kd13:14.1.4": "I asked the Sangha to give me probation for a half-month for that offense, ",
   "pli-tv-kd13:14.1.5": "and the Sangha gave me that probation. ",
   "pli-tv-kd13:14.1.6": "While on probation, I committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.1.7": "What should I do now?” ",
