--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -518,7 +518,7 @@
   "pli-tv-kd13:14.1.2": "He told the monks, ",
   "pli-tv-kd13:14.1.3": "“I had committed one offense of intentional emission of semen, concealed for a half-month. ",
   "pli-tv-kd13:14.1.4": "I asked the Sangha to give me probation for a half-month for that offense, ",
-  "pli-tv-kd13:14.1.5": "and the Sangha gave me that probation. ",
+  "pli-tv-kd13:14.1.5": "which it did. ",
   "pli-tv-kd13:14.1.6": "While on probation, I committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.1.7": "What should I do now?” ",
   "pli-tv-kd13:14.1.8": "They told the Buddha. ",
