Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -523,12 +523,12 @@
   "pli-tv-kd13:14.1.7": "What should I do now?” ",
   "pli-tv-kd13:14.1.8": "They told the Buddha. ",
   "pli-tv-kd13:14.1.9": "“Well then, the Sangha should send the monk Udāyī back to the beginning for one offense of intentional emission of semen, concealed for five days and committed while on probation, and it should then give him probation simultaneous with the probation for the previous offense. ",
-  "pli-tv-kd13:14.2.1": "And he should be sent back to the beginning like this: ",
+  "pli-tv-kd13:14.2.1": "And he should be sent back to the beginning like this. ",
   "pli-tv-kd13:14.2.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:14.2.3": "and say: ",
   "pli-tv-kd13:14.2.4": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for a half-month. ",
-  "pli-tv-kd13:14.2.5": "I asked the Sangha for probation for a half-month for that offense, ",
-  "pli-tv-kd13:14.2.6": "and the Sangha gave me that probation. ",
+  "pli-tv-kd13:14.2.5": "I asked the Sangha to give me probation for a half-month for that offense, ",
+  "pli-tv-kd13:14.2.6": "which it did. ",
   "pli-tv-kd13:14.2.7": "While on probation, I committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.2.8": "I ask the Sangha to send me back to the beginning for that offense.’ ",
   "pli-tv-kd13:14.2.9": "And he should ask a second ",
