--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -538,7 +538,7 @@
   "pli-tv-kd13:14.2.13": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for a half-month. ",
   "pli-tv-kd13:14.2.14": "He asked the Sangha to give him probation for a half-month for that offense, ",
   "pli-tv-kd13:14.2.15": "which it did. ",
-  "pli-tv-kd13:14.2.16": "While he was on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
+  "pli-tv-kd13:14.2.16": "While on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.2.17": "He’s now asking the Sangha to send him back to the beginning for that offense. ",
   "pli-tv-kd13:14.2.18": "If it seems appropriate to the Sangha, the Sangha should send him back to the beginning for that offense. ",
   "pli-tv-kd13:14.2.19": "This is the motion. ",
