--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -540,7 +540,7 @@
   "pli-tv-kd13:14.2.15": "which it did. ",
   "pli-tv-kd13:14.2.16": "While on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.2.17": "He’s now asking the Sangha to send him back to the beginning for that offense. ",
-  "pli-tv-kd13:14.2.18": "If it seems appropriate to the Sangha, the Sangha should send him back to the beginning for that offense. ",
+  "pli-tv-kd13:14.2.18": "If it seems appropriate to the Sangha, the Sangha should send him back to the beginning. ",
   "pli-tv-kd13:14.2.19": "This is the motion. ",
   "pli-tv-kd13:14.2.20": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:14.2.21": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for a half-month. ",
