--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -544,9 +544,9 @@
   "pli-tv-kd13:14.2.19": "This is the motion. ",
   "pli-tv-kd13:14.2.20": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:14.2.21": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for a half-month. ",
-  "pli-tv-kd13:14.2.22": "He asked the Sangha for probation for a half-month for that offense, ",
-  "pli-tv-kd13:14.2.23": "and the Sangha gave him that probation. ",
-  "pli-tv-kd13:14.2.24": "While he was on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
+  "pli-tv-kd13:14.2.22": "He asked the Sangha to give him probation for a half-month for that offense, ",
+  "pli-tv-kd13:14.2.23": "which it did. ",
+  "pli-tv-kd13:14.2.24": "While on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.2.25": "He’s now asking the Sangha to send him back to the beginning for that offense. ",
   "pli-tv-kd13:14.2.26": "The Sangha sends him back to the beginning for that offense. ",
   "pli-tv-kd13:14.2.27": "Any monk who approves of sending him back to the beginning for that offense should remain silent. ",
