Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -548,9 +548,9 @@
   "pli-tv-kd13:14.2.23": "which it did. ",
   "pli-tv-kd13:14.2.24": "While on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.2.25": "He’s now asking the Sangha to send him back to the beginning for that offense. ",
-  "pli-tv-kd13:14.2.26": "The Sangha sends him back to the beginning for that offense. ",
-  "pli-tv-kd13:14.2.27": "Any monk who approves of sending him back to the beginning for that offense should remain silent. ",
-  "pli-tv-kd13:14.2.28": "Any monk who does not approve should speak up. ",
+  "pli-tv-kd13:14.2.26": "The Sangha sends him back to the beginning. ",
+  "pli-tv-kd13:14.2.27": "Any monk who approves of sending him back to the beginning should remain silent. ",
+  "pli-tv-kd13:14.2.28": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:14.2.29": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:14.2.30": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:14.2.31": "The Sangha has sent the monk Udāyī back to the beginning for one offense of intentional emission of semen, concealed for five days and committed while on probation. ",
