--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -554,9 +554,9 @@
   "pli-tv-kd13:14.2.29": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:14.2.30": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:14.2.31": "The Sangha has sent the monk Udāyī back to the beginning for one offense of intentional emission of semen, concealed for five days and committed while on probation. ",
-  "pli-tv-kd13:14.2.32": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd13:14.2.32": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd13:14.3.0": "1.15 Simultaneous probations ",
-  "pli-tv-kd13:14.3.1": "“And he should be given probation simultaneous with probation for the previous offense like this: ",
+  "pli-tv-kd13:14.3.1": "“And he should be given probation simultaneous with probation for the previous offense like this. ",
   "pli-tv-kd13:14.3.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:14.3.3": "and say: ",
   "pli-tv-kd13:14.3.4": "‘I had committed one offense of intentional emission of semen, concealed for a half-month. ",
