Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -571,11 +571,11 @@
   "pli-tv-kd13:14.3.13": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:14.3.14": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:14.3.15": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for a half-month. ",
-  "pli-tv-kd13:14.3.16": "He asked the Sangha for probation for a half-month for that offense, ",
-  "pli-tv-kd13:14.3.17": "and the Sangha gave him that probation. ",
-  "pli-tv-kd13:14.3.18": "While he was on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
+  "pli-tv-kd13:14.3.16": "He asked the Sangha to give him probation for a half-month for that offense, ",
+  "pli-tv-kd13:14.3.17": "which it did. ",
+  "pli-tv-kd13:14.3.18": "While on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.3.19": "He asked the Sangha to send him back to the beginning for that offense, ",
-  "pli-tv-kd13:14.3.20": "and the Sangha sent him back to the beginning. ",
+  "pli-tv-kd13:14.3.20": "which it did. ",
   "pli-tv-kd13:14.3.21": "He’s now asking the Sangha for probation for that offense, simultaneous with the probation for the previous offense. ",
   "pli-tv-kd13:14.3.22": "If it seems appropriate to the Sangha, the Sangha should give him that simultaneous probation. ",
   "pli-tv-kd13:14.3.23": "This is the motion. … ",
