Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -629,8 +629,8 @@
   "pli-tv-kd13:16.1.20": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:16.1.21": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for a half-month. … ",
   "pli-tv-kd13:16.1.22": "He’s now completed that probation and is asking the Sangha for the trial period of six days for the three offenses. ",
-  "pli-tv-kd13:16.1.23": "The Sangha gives him the trial period of six days for the three offenses. ",
-  "pli-tv-kd13:16.1.24": "Any monk who approves of giving him the trial period of six days for the three offenses should remain silent. ",
+  "pli-tv-kd13:16.1.23": "The Sangha gives him that trial period. ",
+  "pli-tv-kd13:16.1.24": "Any monk who approves of giving him that trial period of six days should remain silent. ",
   "pli-tv-kd13:16.1.25": "Any monk who does not approve should speak up. ",
   "pli-tv-kd13:16.1.26": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:16.1.27": "For the third time I speak on this matter. … ",
