Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -631,11 +631,11 @@
   "pli-tv-kd13:16.1.22": "He’s now completed that probation and is asking the Sangha for the trial period of six days for the three offenses. ",
   "pli-tv-kd13:16.1.23": "The Sangha gives him that trial period. ",
   "pli-tv-kd13:16.1.24": "Any monk who approves of giving him that trial period of six days should remain silent. ",
-  "pli-tv-kd13:16.1.25": "Any monk who does not approve should speak up. ",
+  "pli-tv-kd13:16.1.25": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:16.1.26": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:16.1.27": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:16.1.28": "The Sangha has given the monk Udāyī the trial period of six days for the three offenses. ",
-  "pli-tv-kd13:16.1.29": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:16.1.29": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:17.1.0": "1.18 Sending back to the beginning of those undertaking the trial period, etc. ",
   "pli-tv-kd13:17.1.1": "While he was undertaking the trial period, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:17.1.2": "He told the monks, ",
