Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -683,8 +683,8 @@
   "pli-tv-kd13:19.1.18": "I asked the Sangha to send me back to the beginning for that offense, ",
   "pli-tv-kd13:19.1.19": "which it did. ",
   "pli-tv-kd13:19.1.20": "I then asked the Sangha to give me probation for that offense, simultaneous with the probation for the previous offense, ",
-  "pli-tv-kd13:19.1.21": "and the Sangha gave me that simultaneous probation. ",
-  "pli-tv-kd13:19.1.22": "When I had completed the probation, I asked the Sangha for the trial period of six days for the three offenses, ",
+  "pli-tv-kd13:19.1.21": "which it did. ",
+  "pli-tv-kd13:19.1.22": "When I had completed that probation, I asked the Sangha to give me the trial period of six days, ",
   "pli-tv-kd13:19.1.23": "and the Sangha gave me the trial period. ",
   "pli-tv-kd13:19.1.24": "While undertaking the trial period, I committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:19.1.25": "I asked the Sangha to send me back to the beginning for that offense, ",
