Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -691,8 +691,8 @@
   "pli-tv-kd13:19.1.26": "which it did. ",
   "pli-tv-kd13:19.1.27": "I then asked the Sangha to give me probation for that offense, simultaneous with the probation for the previous offense, ",
   "pli-tv-kd13:19.1.28": "which it did. ",
-  "pli-tv-kd13:19.1.29": "When I had completed the probation, I asked the Sangha for the trial period of six days for that offense, ",
-  "pli-tv-kd13:19.1.30": "and the Sangha gave me the trial period. ",
+  "pli-tv-kd13:19.1.29": "When I had completed that probation, I asked the Sangha to give me the trial period of six days, ",
+  "pli-tv-kd13:19.1.30": "which it did. ",
   "pli-tv-kd13:19.1.31": "When I had completed the trial period, while deserving rehabilitation, I committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:19.1.32": "I asked the Sangha to send me back to the beginning for that offense, ",
   "pli-tv-kd13:19.1.33": "which it did. ",
